--- a/bank.html
+++ b/bank.html
@@ -2,28 +2,19 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Банк инициатив — Лаборатория Контура</title>
+  <title>Банк инициатив — Лаборатория Практик ДПРК</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="assets/images/avatar.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="assets/css/main.css" />
 </head>
 <body>
-  <header>
-    <nav>
-      <a href="index.html" class="logo">
-        <img src="assets/images/logo-kontur-24@2x.png" alt="Контур" />
-      </a>
-      <div class="nav-links">
-        <a href="index.html">Лендинг</a>
-        <a href="bank.html">Банк инициатив</a>
-        <a href="solutions.html">Готовые решения</a>
-      </div>
-    </nav>
-  </header>
-
   <section>
+    <div style="margin-bottom: 24px;">
+      <a href="index.html" class="btn btn-ghost" style="margin-bottom: 16px;">← Вернуться на главную</a>
+    </div>
     <h1>Банк инициатив Лаборатории</h1>
     <p>
       Здесь собираются инициативы, которые прошли через Песочницу: идеи в работе, на доработке, реализованные и попавшие в банк знаний.
