--- a/bank.html
+++ b/bank.html
@@ -15,9 +15,9 @@
     <div style="margin-bottom: 24px;">
       <a href="index.html" class="btn btn-ghost" style="margin-bottom: 16px;">← Вернуться на главную</a>
     </div>
-    <h1>Банк инициатив Лаборатории</h1>
+    <h1>Банк инициатив Лаборатории Практик ДПРК</h1>
     <p>
-      Здесь собираются инициативы, которые прошли через Песочницу: идеи в работе, на доработке, реализованные и попавшие в банк знаний.
+      Здесь размещаются идеи в стадии реализации: в разработке или те, за которые ещё никто не взялся. Когда инициатива реализована — она переходит в Магазин готовых решений.
     </p>
     <div id="bank-list">
       <p class="small">Загружаем инициативы…</p>
@@ -25,7 +25,7 @@
   </section>
 
   <footer>
-    Лаборатория Контура — Банк инициатив.
+    Лаборатория Практик ДПРК — Банк инициатив Лаборатории Практик ДПРК.
   </footer>
 
   <script src="assets/js/render-bank.js"></script>
