--- a/solutions.html
+++ b/solutions.html
@@ -17,18 +17,36 @@
     </div>
     <h1>Магазин готовых решений</h1>
     <p>
-      Здесь лежат решения, которые уже прошли путь от идеи до внедрения и готовы к масштабированию.
+      Здесь лежат решения, которые уже прошли путь от идеи до внедрения и готовы к масштабированию. Разделы: кейсы МРЦ, лайфхаки МРЦ и наработки Лаборатории.
     </p>
-    <div id="solutions-list">
-      <p class="small">Загружаем решения…</p>
+
+    <h2 id="section-case-mrc" style="margin-top: 32px;">Кейсы, созданные в МРЦ</h2>
+    <p class="small">Готовые кейсы, собранные с регионов — то, что сотрудники приносят как готовый кейс.</p>
+    <div id="solutions-case-mrc" class="solutions-section">
+      <p class="small">Загружаем…</p>
+    </div>
+
+    <h2 id="section-lifehack-mrc" style="margin-top: 40px;">Лайфхаки, созданные в МРЦ</h2>
+    <p class="small">Лайфхаки, собранные с регионов.</p>
+    <div id="solutions-lifehack-mrc" class="solutions-section">
+      <p class="small">Загружаем…</p>
+    </div>
+
+    <h2 id="section-our-developments" style="margin-top: 40px;">Наработки Лаборатории</h2>
+    <p class="small">Идеи, превратившиеся в инструменты, и другие наработки с вашей стороны.</p>
+    <div id="solutions-our-developments" class="solutions-section">
+      <p class="small">Загружаем…</p>
     </div>
   </section>
 
   <footer>
-    Лаборатория Контура — Магазин готовых решений.
+    Лаборатория Практик ДПРК — Магазин готовых решений.
   </footer>
 
   <script src="assets/js/render-solutions.js"></script>
 </body>
 </html>
+
+
+
 
